# autostack

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: __init__.py  base.py  config.py  developer.py  devops.py  documentation.py  infra_architect.py  llm.py  project_manager.py  qa.py  secops.py
agents/prompts/: __init__.py  developer.py  devops.py  documentation.py  infra_architect.py  pm.py  qa.py
agents/schemas/: __init__.py  developer.py  devops.py  documentation.py  infra_architect.py  pm.py  qa.py
agents/templates/: __init__.py  ci.py  developer_pr.py  documentation_pr.py  qa_pr.py
alembic/: env.py
alembic/versions/: 2025_12_05_1430-001_initial_schema.py  2025_12_05_1700-002_add_execution_mode_and_credentials.py  2026_01_01_1330-003_add_system_settings.py  2026_01_25_0030-004_add_source_branch.py  2026_01_27_0000-005_add_project_type.py  2026_02_15_1303-6230bf3fb1d6_replace_gcp_with_azure_settings.py  2026_02_28_1000-007_recreate_dropped_indexes.py  2026_03_01_0000-008_add_users_and_auth.py
api/: __init__.py  auth.py  config.py  deps.py  main.py  schemas.py
api/routes/: __init__.py  auth.py  health.py  logs.py  projects.py  settings.py  tasks.py  workflow.py
app/: package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/app/(app)/: layout.tsx
app/src/app/(app)/cloud/new/: page.tsx
app/src/app/(app)/dashboard/: page.tsx
app/src/app/(app)/logs/: page.tsx
app/src/app/(app)/projects/: page.tsx
app/src/app/(app)/projects/[id]/: page.tsx
app/src/app/(app)/projects/[id]/review/: page.tsx
app/src/app/(app)/projects/import/: page.tsx
app/src/app/(app)/projects/new/: page.tsx
app/src/app/(app)/settings/: page.tsx
app/src/app/login/: page.tsx
app/src/app/register/: page.tsx
app/src/components/dashboard/: DashboardView.tsx
app/src/components/layout/: Header.tsx  Sidebar.tsx
app/src/components/ui/: badge.tsx  button.tsx  card.tsx
app/src/contexts/: AuthContext.tsx
app/src/hooks/: useProjects.ts
app/src/services/: api.ts
models/: __init__.py  database.py  github_models.py  models.py
services/: __init__.py  agent_registry.py  checkpointer.py  credentials.py  github_client.py  memory.py  notification.py  rate_limiter.py  research.py
services/repomap/: __init__.py  importance.py  mapper.py  parser.py  ranker.py  service.py
utils/: code_analysis.py  logging.py  progress.py  project_analysis.py
workflows/: __init__.py  cloud_graph.py  graph.py  nodes.py  state.py
